# py-air-sviva-api

./: .gitignore  AGENTS.md  DOMAIN_HANDLING.md  PLAN.md  README.md  aqi.py  example.py  pyproject.toml  test_auth.py  test_refresh.py
.github/workflows/: publish.yml  pull_request.yml
air_sviva_api/: __init__.py  aqi.py  client.py  commons.py  const.py  data.py
air_sviva_api/models/: __init__.py  average.py  exceptions.py  lut.py  pollutant.py  reading.py  region.py  station_images.py
tests/: conftest.py  test_aqi.py  test_client.py  test_models.py
