[project]
name = "air-sviva-api"
version = "0.0.1"
description = "A Python wrapper for the Israeli Ministry of Environmental Protection air quality API (air.sviva.gov.il)"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "GuyKh" },
]
maintainers = [
    { name = "Guy Khmelnitsky", email = "guykhmel@gmail.com" },
]
repository = "https://github.com/GuyKh/py-air-sviva-api"
keywords = ["python", "api", "air-quality", "sviva", "israel", "environment"]
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9,<4",
    "mashumaro>=3.13,<4",
    "orjson>=3.11.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
    "pytest-asyncio>=1.4,<2",
    "ruff>=0.15,<0.16",
    "mypy>=2.1,<2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
lint.select = ["E", "F", "W", "I", "N"]
target-version = "py311"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.15,<0.16",
    "mypy>=2.1,<2.2",
]